--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,8 +12,8 @@
     />
     <title>Sorting Algorithms Visualizer</title>
 </head>
-<body>
-    <div id="root">
+<body style="position: absolute; left: 0; right: 0; top: 0; bottom: 0;">
+    <div id="root" style="height: 100%">
 
     </div>
 </body>
